Modificações tela de agendamentos

--- a/front-end/agendamentos.html
+++ b/front-end/agendamentos.html
@@ -17,7 +17,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="#"  class="active">Agendamentos</a></li>
                     <li><a href="./sobrenos.html">Sobre nós</a></li>
-                    <li><button><a href="#">Cadastre-se</a></button></li>
+                    <li><button><a href="./perfil.html">Cadastre-se</a></button></li>
                 </ul>
 
             </nav>
@@ -25,117 +25,139 @@
     </header>
 
 <main>
-<section id="agendamentos">
-<div class="agendamento-content">
-  <div class="esquerda">
-  <div class="agendamento-card">
-    <div class="card-agendado">
-      <h3>Nome contanto</h3>
-      <h4>Serviço que será feito<h4>
-      <span class="divisao"> </span>
-        <div class="card-horario">
-          <p>Segunda 18 de Março ás 12:45</p>
-          <ul>
-            <li><span class=icone-tempo></span> 60 min</li>
-          </ul>
-          <div class="icone-img">
-            <span class="icone-profissional"></span>
-          </div>
-        </div>  
-    </div>
-  </div>
-
-  <div class="direita">
-  <div class="agendamento-users">
-    <h2> Selecione um atendente:</h2>
-        <div class="atendentes-lista">
-          <div class="atendente-card">
-            <img src="" alt="">
-            <span class="iconetds"></span>
-            <img src="" alt="">
-            <p>Todos</p>
-          </div>
-          <div class="atendente-card">
-            <img src="" alt="">
-            <p>José</p>
-          </div>
-          <div class="atendente-card">
-            <img src="" alt="">
-            <p>Maria</p>
-          </div>
-          <div class="atendente-card">
-            <img src="" alt="">
-            <p>Luíza</p>
-          </div>
-          <div class="atendente-card">
-            <img src="" alt="">
-            <p>João</p>
+  <section id="agendamentos">
+    <div class="agendamento-content">
+      <div class="esquerda">
+        <div class="agendamento-card">
+          <div class="card-agendado">
+            <h3>Nome contanto</h3>
+            <h4>Serviço que será feito<h4>
+                <span class="divisao"> </span>
+                <div class="card-horario">
+                  <p>Segunda 18 de Março ás 12:45</p>
+                  <ul>
+                    <li><span class=icone-tempo></span> 60 min</li>
+                  </ul>
+                  <div class="icone-img">
+                    <span class="icone-profissional"></span>
+                  </div>
+                </div>
           </div>
         </div>
-  </div>
-   <div class="tabela-dia"> <!-- filtro -->
-    <h2>Selecione uma data: </h2>
-    <div class="escolha-dia">
-     <span class="seta-esquerda"></span>
-      <tr class="cabecalho-escolhe_dia">
-        <th>Segunda</th>
-        <td>01</td>
-        <th>Terça</th>
-          <td>02</td>
-        <th>Quarta</th>
-          <td>03</td> 
-        <th>Quinta</th>
-          <td>04</td>
-        <th>Sexta</th>
-        <td>05</td>
-      </tr>
-      <span class="seta-direita"></span>
-    </div>
-    <div class="tabela-horarios">
-    <table class="horarios">
-            <tr class="cabecalho">
-              <th>Horário</th>
-              <th>Serviço</th>
-              <th>Cliente</th>
-              <th>Detalhes</th>
-              <th>Controles</th>
-            </tr>
-            <tr>
-              <td>08:00</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td><div class="controles">
-                <span class="editar"><a href="#"></a></span>
-                <span class="mais-opcoes"><a href="#"></a></span>
-              </div></td>
-            </tr>
-            <tr>
-              <td>10:00</td>
-              <td>Design de sobrancelha</td>
-              <td>Luiz</td>
-              <td>Lorem ipsum dolor.</td>
-              <td><div class="controles">
-                <span class="editar"><a href="#"></a></span>
-                <span class="mais-opcoes"><a href="#"></a></span>
-              </div></td>
-            </tr>
-            <tr>
-              <td>11:30</td>
-              <td>Corte e tingimento de cabelo</td>
-              <td>Alvaro</td>
-              <td>Lorem ipsum dolor.</td>
-              <td><div class="controles">
-                <span class="editar"><a href="#"></a></span>
-                <span class="mais-opcoes"><a href="#"></a></span>
-              </div></td>
-      </tr>
-          </table>
+
+        <div class="direita">
+          <div class="agendamento-users">
+            <h2> Selecione um atendente:</h2>
+            <div class="atendentes-lista">
+              <div class="atendente-card">
+                <img src="" alt="">
+                <span class="iconetds"></span>
+                <img src="" alt="">
+                <p>Todos</p>
+              </div>
+              <div class="atendente-card">
+                <img src="" alt="">
+                <p>José</p>
+              </div>
+              <div class="atendente-card">
+                <img src="" alt="">
+                <p>Maria</p>
+              </div>
+              <div class="atendente-card">
+                <img src="" alt="">
+                <p>Luíza</p>
+              </div>
+              <div class="atendente-card">
+                <img src="" alt="">
+                <p>João</p>
+              </div>
+            </div>
+          </div>
+          <!-- filtro -->
+          <div class="tabela-dia">
+            <h2>Selecione uma data:
+              <div class="tabela-dia-content">
+                <div class="escolha-dia">
+                  <span class="seta-esquerda"></span>
+                  <div class=dia-card>
+                    <h3>Segunda</h3>
+                    <p>01</p>
+                  </div>
+                  <div class=dia-card>
+                    <h3>Terça</h3>
+                    <p>02</p>
+                  </div>
+                  <div class=dia-card>
+                    <div class="selected">
+                      <h3>Quarta</h3>
+                      <p>03</p>
+                    </div>
+                  </div>
+                  <div class=dia-card>
+                    <h3>Quinta</h3>
+                    <p>04</p>
+                  </div>
+                  <div class=dia-card>
+                    <h3>Sexta</h3>
+                    <p>05</p>
+                  </div>
+                  <span class="seta-direita"></span>
+                </div>
+              </div>
+            </h2>
+          </div>
+          <!-- fim do filtro -->
+          <div class="tabela-horarios">
+            <table class="horarios">
+              <tr class="cabecalho">
+                <th>Horário</th>
+                <th>Serviço</th>
+                <th>Cliente</th>
+                <th>Detalhes</th>
+                <th>Controles</th>
+              </tr>
+              <tr class="linha-completa">
+                <td>08:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>
+                  <div class="controles">
+                    <span class="editar"><a href="#"></a></span>
+                    <span class="mais-opcoes"><a href="#"></a></span>
+                  </div>
+                </td>
+              </tr>
+              <tr class="linha-completa">
+                <td>10:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>
+                  <div class="controles">
+                    <span class="editar"><a href="#"></a></span>
+                    <span class="mais-opcoes"><a href="#"></a></span>
+                  </div>
+                </td>
+              </tr>
+              <tr class="linha-completa">
+                <td>11:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>
+                  <div class="controles">
+                    <span class="editar"><a href="#"></a></span>
+                    <span class="mais-opcoes"><a href="#"></a></span>
+                  </div>
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-</section>
+  </section>
 </main>
 
 <footer>
