adicionado telas feitas pela Maria

--- a/front-end/agendamentos.html
+++ b/front-end/agendamentos.html
@@ -14,10 +14,10 @@
             <img src="./img/icon-logo.svg" alt="" class="logo">
             <nav class="menu-content">
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./paginaInicial.html">Home</a></li>
                     <li><a href="#"  class="active">Agendamentos</a></li>
                     <li><a href="./sobrenos.html">Sobre nós</a></li>
-                    <li><button><a href="./perfil.html">Cadastre-se</a></button></li>
+                    <li><button><a href="./form_login.html">Cadastre-se</a></button></li>
                 </ul>
 
             </nav>
