--- a/front-end/sobrenos.html
+++ b/front-end/sobrenos.html
@@ -14,7 +14,7 @@
   <img src="./img/icon-logo.svg" alt="" class="logo">
   <nav class="menu-content">
    <ul>
-   <li><a href="index.html">Home</a></li>
+   <li><a href="./paginaInicial.html">Home</a></li>
    <li><a href="./agendamentos.html">Agendamentos</a></li>
    <li><a href="./sobrenos.html" class="active">Sobre nós</a></li>
    </ul>
