Modificações na tela de agendamentos, e adição de ícones

--- a/front-end/agendamentos.html
+++ b/front-end/agendamentos.html
@@ -28,6 +28,9 @@
   <section id="agendamentos">
     <div class="agendamento-content">
       <div class="esquerda">
+        <div class="btn-openandclose">
+          <input type="checkbox" id=""></input>
+        </div>
         <div class="agendamento-card">
           <div class="card-agendado">
             <h3>Nome contanto</h3>
@@ -44,116 +47,116 @@
                 </div>
           </div>
         </div>
+      </div>
 
-        <div class="direita">
-          <div class="agendamento-users">
-            <h2> Selecione um atendente:</h2>
-            <div class="atendentes-lista">
-              <div class="atendente-card">
-                <img src="" alt="">
-                <span class="iconetds"></span>
-                <img src="" alt="">
-                <p>Todos</p>
-              </div>
-              <div class="atendente-card">
-                <img src="" alt="">
-                <p>José</p>
-              </div>
-              <div class="atendente-card">
-                <img src="" alt="">
-                <p>Maria</p>
-              </div>
-              <div class="atendente-card">
-                <img src="" alt="">
-                <p>Luíza</p>
-              </div>
-              <div class="atendente-card">
-                <img src="" alt="">
-                <p>João</p>
-              </div>
+      <div class="direita">
+        <div class="agendamento-users">
+          <h2> Selecione um atendente:</h2>
+          <div class="atendentes-lista">
+            <div class="atendente-card">
+              <img src="" alt="">
+              <span class="iconetds"></span>
+              <img src="" alt="">
+              <p>Todos</p>
+            </div>
+            <div class="atendente-card">
+              <img src="" alt="">
+              <p>José</p>
+            </div>
+            <div class="atendente-card">
+              <img src="" alt="">
+              <p>Maria</p>
+            </div>
+            <div class="atendente-card">
+              <img src="" alt="">
+              <p>Luíza</p>
+            </div>
+            <div class="atendente-card">
+              <img src="" alt="">
+              <p>João</p>
             </div>
           </div>
-          <!-- filtro -->
-          <div class="tabela-dia">
-            <h2>Selecione uma data:
-              <div class="tabela-dia-content">
-                <div class="escolha-dia">
-                  <span class="seta-esquerda"></span>
-                  <div class=dia-card>
-                    <h3>Segunda</h3>
-                    <p>01</p>
-                  </div>
-                  <div class=dia-card>
-                    <h3>Terça</h3>
-                    <p>02</p>
-                  </div>
-                  <div class=dia-card>
-                    <div class="selected">
-                      <h3>Quarta</h3>
-                      <p>03</p>
-                    </div>
-                  </div>
-                  <div class=dia-card>
-                    <h3>Quinta</h3>
-                    <p>04</p>
-                  </div>
-                  <div class=dia-card>
-                    <h3>Sexta</h3>
-                    <p>05</p>
-                  </div>
-                  <span class="seta-direita"></span>
+        </div>
+        <!-- filtro -->
+        <div class="tabela-dia">
+          <h2>Selecione uma data:
+            <div class="tabela-dia-content">
+              <div class="escolha-dia">
+                <img src="./img/seta-esquerda.svg" alt="" class="seta-esquerda">
+                <div class=dia-card>
+                  <h3>Segunda</h3>
+                  <p>01</p>
                 </div>
+                <div class=dia-card>
+                  <h3>Terça</h3>
+                  <p>02</p>
+                </div>
+                <div class=dia-card>
+                  <div class="selected">
+                    <h3>Quarta</h3>
+                    <p>03</p>
+                  </div>
+                </div>
+                <div class=dia-card>
+                  <h3>Quinta</h3>
+                  <p>04</p>
+                </div>
+                <div class=dia-card>
+                  <h3>Sexta</h3>
+                  <p>05</p>
+                </div>
+                <span class="seta-direita"></span>
               </div>
-            </h2>
-          </div>
-          <!-- fim do filtro -->
-          <div class="tabela-horarios">
-            <table class="horarios">
-              <tr class="cabecalho">
-                <th>Horário</th>
-                <th>Serviço</th>
-                <th>Cliente</th>
-                <th>Detalhes</th>
-                <th>Controles</th>
-              </tr>
-              <tr class="linha-completa">
-                <td>08:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>
-                  <div class="controles">
-                    <span class="editar"><a href="#"></a></span>
-                    <span class="mais-opcoes"><a href="#"></a></span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="linha-completa">
-                <td>10:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>
-                  <div class="controles">
-                    <span class="editar"><a href="#"></a></span>
-                    <span class="mais-opcoes"><a href="#"></a></span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="linha-completa">
-                <td>11:30</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>
-                  <div class="controles">
-                    <span class="editar"><a href="#"></a></span>
-                    <span class="mais-opcoes"><a href="#"></a></span>
-                  </div>
-                </td>
-              </tr>
-            </table>
-          </div>
+            </div>
+          </h2>
+        </div>
+        <!-- fim do filtro -->
+        <div class="tabela-horarios">
+          <table class="horarios">
+            <tr class="cabecalho">
+              <th>Horário</th>
+              <th>Serviço</th>
+              <th>Cliente</th>
+              <th>Detalhes</th>
+              <th>Controles</th>
+            </tr>
+            <tr class="linha-completa">
+              <td>08:00</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>
+                <div class="controles">
+                  <span class="editar"><a href="#"></a></span>
+                  <span class="mais-opcoes"><a href="#"></a></span>
+                </div>
+              </td>
+            </tr>
+            <tr class="linha-completa">
+              <td>10:00</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>
+                <div class="controles">
+                  <span class="editar"><a href="#"></a></span>
+                  <span class="mais-opcoes"><a href="#"></a></span>
+                </div>
+              </td>
+            </tr>
+            <tr class="linha-completa">
+              <td>11:30</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>
+                <div class="controles">
+                  <span class="editar"><a href="#"></a></span>
+                  <span class="mais-opcoes"><a href="#"></a></span>
+                </div>
+              </td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
