modificação na tela de agendamentos

--- a/front-end/agendamentos.html
+++ b/front-end/agendamentos.html
@@ -112,51 +112,10 @@
         </div>
         <!-- fim do filtro -->
         <div class="tabela-horarios">
-          <table class="horarios">
-            <tr class="cabecalho">
-              <th>Horário</th>
-              <th>Serviço</th>
-              <th>Cliente</th>
-              <th>Detalhes</th>
-              <th>Controles</th>
-            </tr>
-            <tr class="linha-completa">
-              <td>08:00</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td>
-                <div class="controles">
-                  <span class="editar"><a href="#"></a></span>
-                  <span class="mais-opcoes"><a href="#"></a></span>
-                </div>
-              </td>
-            </tr>
-            <tr class="linha-completa">
-              <td>10:00</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td>
-                <div class="controles">
-                  <span class="editar"><a href="#"></a></span>
-                  <span class="mais-opcoes"><a href="#"></a></span>
-                </div>
-              </td>
-            </tr>
-            <tr class="linha-completa">
-              <td>11:30</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td>
-                <div class="controles">
-                  <span class="editar"><a href="#"></a></span>
-                  <span class="mais-opcoes"><a href="#"></a></span>
-                </div>
-              </td>
-            </tr>
-          </table>
+            <ul class="linha-completa">
+              <li class="linha-div"></li>
+                <li>08:00</li>
+                </ul>
         </div>
       </div>
     </div>
