--- a/front-end/agendamentos.html
+++ b/front-end/agendamentos.html
@@ -29,7 +29,7 @@
     <div class="agendamento-content">
       <div class="esquerda">
         <div class="btn-openandclose">
-          <input type="checkbox" id=""></input>
+          <span><a href="./agendamentos.html"><img src="" alt=""></a></span>
         </div>
         <div class="agendamento-card">
           <div class="card-agendado">
@@ -112,10 +112,16 @@
         </div>
         <!-- fim do filtro -->
         <div class="tabela-horarios">
-            <ul class="linha-completa">
-              <li class="linha-div"></li>
+          <div class="lista-horarios">
+            <ul class="linha-completa-sem-agendamento">
+              <li class="linha"></li>
                 <li>08:00</li>
                 </ul>
+              </div>
+                <!-- <ul class="linha-completa-com-agendamento">
+                    <li>08:00</li>
+                    <li class="linha-div"></li>
+                    </ul> -->
         </div>
       </div>
     </div>
