--- a/front-end/forms/form_login.html
+++ b/front-end/forms/form_login.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
         <header>
             <div class="container">
-                <img src="./img/icon-logo.svg" alt="" class="logo">
+                <img src="./img/icon-logosenac.svg" alt="" class="logo">
                 <nav class="menu-content">
                     <ul>
-                        <li><a href="./paginaInicial.html">Home</a></li>
+                        <li><a href="../">Home</a></li>
                         <li><a href="./agendamentos.html">Agendamentos</a></li>
                         <li><a href="./sobrenos.html">Sobre nós</a></li>
                     </ul>
