--- a/front-end/sobrenos.html
+++ b/front-end/sobrenos.html
@@ -7,21 +7,23 @@
 <title>Sobre nós</title>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"><link rel="stylesheet" href="./css/normalize.css">
 <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/normalize.css">
 </head>
 <body>
 <header>
- <div class="container">
-  <img src="./img/icon-logo.svg" alt="" class="logo">
-  <nav class="menu-content">
-   <ul>
-   <li><a href="./paginaInicial.html">Home</a></li>
-   <li><a href="./agendamentos.html">Agendamentos</a></li>
-   <li><a href="./sobrenos.html" class="active">Sobre nós</a></li>
-   </ul>
-  </nav>
- </div>
-</header>
+  <header>
+    <div class="container">
+        <img src="./img/icon-logosenac.svg" alt="" class="logo">
+        <nav class="menu-content">
+            <ul>
+                <li><a href="./paginaInicialsemLogin.html" >Página Inicial</a></li>
+                <li><a href="./sobrenos.html" class="active">Sobre nós</a></li>
+                <li><a href="#"></a></li>
+            </ul>
 
+        </nav>
+    </div>
+</header>
 
 <section id="titulo">
 <h2>Um pouco do que fizemos</h2>
@@ -35,7 +37,7 @@
 
    <div class="sobre_nos-img">
 
-    <img src="./img/card-cortemasculino.png" alt="Arthur">
+    <img src="./img/exemplo-img.png" alt="Arthur">
 
    </div>
 
@@ -56,7 +58,7 @@
 
        <div class="sobre_nos-img">
 
-    <img src="./img/card-cortemasculino.png" alt="Maria">
+    <img src="./img/exemplo-img.png" alt="Maria">
 
 </div>
 
@@ -77,7 +79,7 @@
 
 <div class="sobre_nos-img">
 
-<img src="./img/card-cortemasculino.png" alt="Vitória">
+<img src="./img/exemplo-img.png" alt="Vitória">
 
 </div>
 
