--- a/front-end/forms/form_ag.html
+++ b/front-end/forms/form_ag.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agendar</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <img src="./img/icon-logo.svg" alt="" class="logo">
+            <img src="./img/icon-logosenac.svg" alt="" class="logo">
             <nav class="menu-content">
                 <ul>
-                    <li><a href="./paginaInicial.html">Home</a></li>
-                    <li><a href="./agendamentos.html">Agendamentos</a></li>
+                    <li><a href="../paginaInicialsemLogin.html">Home</a></li>
                     <li><a href="./sobrenos.html">Sobre nós</a></li>
                 </ul>
             </nav>
